# themarketmakinggame

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_RESULTS.md  docker-compose.yml  start.sh  stop.sh
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.engine  Dockerfile.gateway  Dockerfile.nginx  nginx.conf
engine/: CMakeLists.txt
engine/bindings/: python_bindings.cpp
engine/include/mmg/: engine.h  order_book.h  types.h
engine/src/: engine.cpp  order_book.cpp
engine/tests/: test_engine.cpp  test_order_book.cpp  test_pnl.cpp
frontend/: analysis_options.yaml  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: models.dart
frontend/lib/providers/: providers.dart
frontend/lib/screens/: exchange_console.dart  leaderboard_screen.dart  lobby_screen.dart  trading_terminal.dart
frontend/lib/services/: websocket_service.dart
frontend/lib/widgets/: order_entry.dart  positions_panel.dart  price_ladder.dart
gateway/: requirements.txt  setup.py
gateway/app/: __init__.py  main.py  session_manager.py  ws_handler.py
gateway/tests/: __init__.py  test_e2e.py  test_session_manager.py
scripts/: build_all.sh  dev_up.sh  test_all.sh
